--- a/src/app/completion-progress/completion-progress.component.html
+++ b/src/app/completion-progress/completion-progress.component.html
@@ -1,12 +1,12 @@
-<div
-  class="main"
-  style="top: 0;left: 0;width: 100%;height: auto;margin: auto;">
-  <label for="file-upload" class="custom-file-upload ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only">
+<div class="main" style="top: 0;left: 0;width: 100%;height: auto;margin: auto;">
+  <label
+    for="file-upload"
+    class="custom-file-upload ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+  >
     <i class="fa fa-cloud-upload"></i> Load Data From Excell
   </label>
-  <input id="file-upload" type="file" (change)="onChange($event)"/>
+  <input id="file-upload" type="file" (change)="onChange($event)" />
   <button id="btnLoadData" class="btn btn-danger">Load Data From DB</button>
   <button (click)="onClick()" class="btn btn-warning">Print</button>
 </div>
-<div id="chart" style="width: 100%;height: 100vh;"></div>
-
+<div id="chart" style="width: 100%;height: 100vh"></div>
